--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1732,6 +1732,66 @@ body {
 .cid-rq1fdyvhib .mbr-timeline-text {
   text-align: left;
 }
+.cid-rDz0K59gd0 {
+  padding-top: 75px;
+  padding-bottom: 90px;
+  background-color: #f9eecb;
+}
+.cid-rDz0K59gd0 .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rDz0K59gd0 .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rDz0K59gd0 .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rDz0K59gd0 .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rDz0K59gd0 .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-rDz0K59gd0 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rDz0K59gd0 .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-rDz0K59gd0 .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rDz0K59gd0 .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
 .cid-rq1j0iHlFp {
   padding-top: 90px;
   padding-bottom: 90px;
